--- a/drury.ipynb
+++ b/drury.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# load the data, Drury dataset\n",
-    "with open('drury.txt', 'r', encoding='utf-8') as f:\n",
+    "with open('data/drury.txt', 'r', encoding='utf-8') as f:\n",
     "    text = f.read()\n",
     "\n",
     "# here are all the unique characters that occur in this text\n",
