Add optim and training sections

--- a/drury.ipynb
+++ b/drury.ipynb
@@ -307,7 +307,22 @@
     "            # append sampled index to the running sequence\n",
     "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
     "        return idx\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = BigramLanguageModel()\n",
     "m = model.to(device)\n",
     "# print the number of parameters in the model\n",
@@ -315,7 +330,22 @@
     "\n",
     "# create a PyTorch optimizer\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for iter in range(max_iters):\n",
     "\n",
     "    # every once in a while evaluate the loss on train and val sets\n",
@@ -330,7 +360,7 @@
     "    logits, loss = model(xb, yb)\n",
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
-    "    optimizer.step()\n"
+    "    optimizer.step()"
    ]
   },
   {
