--- a/tiny_csv.ipynb
+++ b/tiny_csv.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -279,10 +280,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load dataset into a pandas DataFrame\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "\n",
     "data = pd.read_csv(\"data/abalone.data\")\n",
     "\n",
     "# Handle missing values (if any)\n",
